# Session-manager

./: Cargo.toml  README.md
.agent/: AGENT.md  master_plan.md
.agent/skills/test-tui/: SKILL.md
.agent/specs/: 01-session-catalog-mvp.md  02-session-transcript-rendering.md  03-session-delete-flow.md  04-resilience-and-performance-hardening.md  05-dynamic-layout-and-panel-focus.md  06-session-resume-handoff.md  07-layout-interaction-automation.md  08-engine-tab-and-source-switching.md  09-claude-transcript-adapter.md  10-engine-aware-resume-handoff.md  11-grouped-session-tree-browser.md  12-group-header-preview-and-enter-semantics.md  13-group-bulk-delete-flow.md  14-tree-node-visual-polish.md  15-bottom-bar-refactor-and-help-modal.md  oxker_style_ui_plan.md
.claude/: settings.local.json
.codegraph/: daemon.pid
docs/: prd-2.md  prd-3.md  prd-4.md  prd-5.md  prd-6.md  prd.md
docs/Requirements-plan/: initial_spec.md
docs/data/: rollout-2026-04-14T11-29-59-019d8a09-ed11-72c2-96ea-c04de12b0c6f.jsonl
docs/feedback/: defect-report-2026-06-17.md
docs/inital-workflow/character/: PM.md
docs/inital-workflow/character/codex-spec/: README.md
docs/inital-workflow/character/codex-spec/01-methodology/: agent_prompts.md
docs/inital-workflow/character/codex-spec/02-project-template/: AGENT.md  master_plan.template.md  spec.template.md
docs/inital-workflow/character/codex-spec/03-guides/: codex-cli-操作手册.md
src/: app.rs  catalog.rs  config.rs  delete.rs  detail.rs  lib.rs  main.rs  resume.rs  terminal.rs  tui.rs
tests/: pty_shortcuts.rs
