[package]
name = "sessions-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
tui-tree-widget = "0.24.0"

[dev-dependencies]
tempfile = "3.23.0"
